tests/negative/gold/bad-literal7-test.gold
tests/negative/bad-literal7-test.toit:8:9: error: Invalid number literal
  print 0_.123456
        ^~~~~~~~~
tests/negative/bad-literal7-test.toit:9:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed
